name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, miso, diagrams-miso, diagrams-lib, colour, transformers
  default-language:    Haskell2010
